// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressList /> should render when first step completed 1`] = `
<ProgressStepper>
  <ProgressStep
    description="Completed"
    id="awsAccountSetup"
    titleId="awsAccountSetup-title"
    variant="success"
  >
    Account setup
  </ProgressStep>
  <ProgressStep
    description="Completed"
    id="DNSSetup"
    titleId="DNSSetup-title"
    variant="success"
  >
    DNS setup
  </ProgressStep>
  <ProgressStep
    description="Installing cluster"
    id="clusterInstallation"
    isCurrent={true}
    titleId="clusterInstallation-title"
    variant="info"
  >
    Cluster installation
  </ProgressStep>
</ProgressStepper>
`;

exports[`<ProgressList /> should render when first step in progress 1`] = `
<ProgressStepper>
  <ProgressStep
    description="Preparing account"
    id="awsAccountSetup"
    isCurrent={true}
    titleId="awsAccountSetup-title"
    variant="info"
  >
    Account setup
  </ProgressStep>
  <ProgressStep
    description="Pending"
    id="DNSSetup"
    titleId="DNSSetup-title"
    variant="pending"
  >
    DNS setup
  </ProgressStep>
  <ProgressStep
    description="Pending"
    id="clusterInstallation"
    titleId="clusterInstallation-title"
    variant="pending"
  >
    Cluster installation
  </ProgressStep>
</ProgressStepper>
`;

exports[`<ProgressList /> should render when second step completed 1`] = `
<ProgressStepper>
  <ProgressStep
    description="Completed"
    id="awsAccountSetup"
    titleId="awsAccountSetup-title"
    variant="success"
  >
    Account setup
  </ProgressStep>
  <ProgressStep
    description="Completed"
    id="DNSSetup"
    titleId="DNSSetup-title"
    variant="success"
  >
    DNS setup
  </ProgressStep>
  <ProgressStep
    description="Installing cluster"
    id="clusterInstallation"
    isCurrent={true}
    titleId="clusterInstallation-title"
    variant="info"
  >
    Cluster installation
  </ProgressStep>
</ProgressStepper>
`;
